# ArchQuickView

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  install.sh  quickview.desktop  quickview.py
dolphin-plugin/: CMakeLists.txt  quickviewplugin.cpp  quickviewplugin.json
